[package]
name = "graph-data-util"
version = "0.1.0"
authors = ["Stefan Junker <mail@stefanjunker.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph-builder = { path = "../graph-builder" }
structopt = { version = "0.3", features = [ "paw" ] }
clap = "2"
paw = "1"
dirs = "2"
log = "0.4"
serde = "1"
serde_json = "1"
tokio = "0.2"
env_logger = "0.7"
failure = "0.1"
anyhow = "1"
